# rust-cli-app

./: Cargo.toml  README.md
src/: main.rs
src/cmd/: mod.rs
