[package]
name = "options-elements"
version = "0.1.0"
# App skeleton from Steven's hal code
authors = ["sanket1729 <sanket1729@gmail.com>", "Steven Roose"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements-miniscript = {git = "https://github.com/sanket1729/elements-miniscript", branch = "rebase_master"}
bitcoin = "0.26"
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"
chrono = { version = "0.4.6", features = ["serde"] }
rand = "0.4"

base64-compat = "1.0.0"
byteorder = "1.3.1"
serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"
hex = "0.3.2"

# For external commands
jobserver = "0.1.11"
shell-escape = "0.1.4"